crates/macro-tests/tests/snapshots/authorization__credential_definition.snap
---
source: crates/macros/tests/authorization.rs
assertion_line: 59
expression: "&request"
---
credential_issuer: "http://vercre.io"
response_type: code
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
redirect_uri: "http://localhost:3000/callback"
state: "1234"
code_challenge: "[base64]"
code_challenge_method: S256
authorization_details: "[authorization_details]"
subject_id: normal_user
wallet_issuer: "http://vercre.io"
